update all to pyephember2 naming

--- a/tox.ini
+++ b/tox.ini
@@ -9,5 +9,5 @@ deps =
      -rrequirements.txt
      -rrequirements_test.txt
 commands =
-     flake8 pyephember
-     pylint pyephember
+     flake8 pyephember2
+     pylint pyephember2
