--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -1,5 +1,5 @@
-name: Publish Python 🐍 distribution 📦 to PyPI
-
+name: >-
+  if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
 on:
   release:
     types: [created]
