--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -1,8 +1,6 @@
-name: >-
-  if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
-on:
-  release:
-    types: [created]
+name: Publish Python 🐍 distribution 📦 to PyPI and TestPyPI
+
+on: push
 
 jobs:
   build:
@@ -34,7 +32,7 @@ jobs:
   publish-to-pypi:
     name: >-
       Publish Python 🐍 distribution 📦 to PyPI
-    #if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
+    if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
     needs:
     - build
     runs-on: ubuntu-latest
